Refactor Neuron functions for int only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,19 @@ python = "^3.10"
 
 
 [tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 pre-commit = "^3.3.3"
+black = "^23.3.0"
+pyproject-flake8 = "^6.0.0.post1"
 
 [tool.poetry.scripts]
 brain = "brain.neuron:main"
 
+[tool.flake8]
+max-line-length = 1000
+
 [tool.pytest.ini_options]
-pythonpath = [
-  ".", "src"
-]
+pythonpath = [".", "src"]
 
 [build-system]
 requires = ["poetry-core"]
