--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,10 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
+        entry: pflake8
+        additional_dependencies:
+          - pyproject-flake8
+        args: [--config=pyproject.toml]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.4.1
